Update some languages issues

--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,22 @@
       <header data-aos="fade-down">
         <h1 id="title">Soda Stereo</h1>
         <p id="subtitle">
-          The most important and influential band in the entire history of Latin
-          American rock.
+          La banda más importante e influyente en toda la historia del rock latinoamericano. 
         </p>
         <figure id="img-div">
           <img
             id="img"
             src="../src/images/soda-intro-2.jpg"
-            alt="The three members of Soda Stereo, having a good time"
+            alt="Los tres miembros de Soda Stereo, pasando un buen rato"
           />
           <figcaption id="img-caption">
-            Charly Alberti, Gustavo Cerati y Hector "Zeta" Bosio - recording
-            sessions of the EP “Languis”.
+            Charly Alberti, Gustavo Cerati y Hector "Zeta" Bosio - sesiones de grabación del EP "Languis".
           </figcaption>
         </figure>
       </header>
       <main>
         <h2 id="tribute-info" data-aos="fade-left">
-          Here's a time line of Soda Stereo's Journey:
+          He aquí una cronología de la historia de Soda Stereo:
         </h2>
         <ol>
           <li>
@@ -198,13 +196,12 @@
         </aside>
         <footer>
           <p id="footer-div">
-            If you have time, you should read more about this incredible Latin
-            American Rock Band on their
+            Si tienes tiempo, deberías leer más sobre esta increíble banda de rock latinoamericana en su
             <a
               id="tribute-link"
               href="https://www.sodastereo.com/"
               target="_blank"
-              >Official WebSite
+              >WebSite Oficial
             </a>
             .
           </p>
